# openclaw-py

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  flet_app.py  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.agent/workflows/: index.md
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  docs-deploy.yml  install-smoke.yml  labeler.yml  pr-label-automation.yml  pr-template-check.yml  pre-commit.yml  release.yml  scorecard.yml  stale.yml
Formula/: pyclaw.rb
RPD_CLIENT_DESIGN/: index.html
api-reference/: index.html
architecture/: index.html
ci-local/: index.html
concepts/: index.html
configuration/: index.html
docs/: CNAME  README.md  RPD_CLIENT_DESIGN.md  api-reference.md  architecture.md  ci-local.md  concepts.md  configuration.md  flet-build.md  install.md  mkdocs.yml  quickstart.md  release-and-publish.md  testing-incremental.md  troubleshooting.md
docs/plans/: 2026-03-21-runtime-agent-orchestration-design.md
docs/reference/: 20260301_plan.md  20260301gap.md  20260302_todo.md  PROGRESS.md  copaw_comparison_plan.md  gap-analysis.md  github_automation_plan_0304.md  implement_plan_20260228.md  implement_plan_next.md  maxclaw_comparison_plan.md  nanobot_comparison_plan.md  platform_implement_plan_0304.md  python-flet-rewrite-plan.md  ui_execution_task_breakdown.md  ui_prd_flet_flutter.md  ui_release_gate.md  ui_test_checklist.md  ui_upgrade_plan.md
docs/release_notes/: release-notes.md
docs/superpowers/plans/: 2026-03-21-flexible-agent-orchestration.md
flet-build/: index.html
flutter_app/: .flutter-plugins  .flutter-plugins-dependencies  ARCHIVE_NOTICE.md  pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_config_subset
flutter_app/.dart_tool/extension_discovery/: vs_code.json
flutter_app/android/: local.properties
flutter_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_app/lib/: app.dart  main.dart
flutter_app/lib/core/: gateway_client.dart
flutter_app/lib/widgets/: code_block.dart  image_preview.dart  latex_text.dart  message_bubble.dart  model_selector.dart  plan_progress.dart  responsive_shell.dart  shimmer_loading.dart  stagger_list.dart  tool_call_card.dart
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/test/core/: gateway_client_test.dart  local_cache_test.dart  models_test.dart  providers_test.dart
flutter_app/web/: index.html  manifest.json
install/: index.html
plans/2026-03-21-runtime-agent-orchestration-design/: index.html
quickstart/: index.html
reference/: PROGRESS.md  Phase_tables.md  REFERENCE_INDEX.md  REFERENCE_README.md  REFERENCE_TABLES.md  RELEASE_0.1.3.md  RELEASE_0.1.4.md  python-flet-rewrite-plan.md  ui_upgrade_plan.md
reference/ops/: M1_BUILTIN_SKILLS_CANDIDATES.md  M2_CLIENT_BASELINE_CHECKLIST.md  M3_RELEASE_GATE_REPORT.json  M3_RELEASE_GATE_V1.md  M4_UPSTREAM_RELEASE_DOCS_TRACKER.md  P0_SECURITY_WEEKLY_CHECKLIST.md  P0_UPSTREAM_TRACKING_REPORT.md  P1_CHANNEL_CAPABILITY_DOD.md  P1_SECRETS_AUDIT_TEMPLATE.md
release-and-publish/: index.html
release_notes/release-notes/: index.html
scripts/: build-all.ps1  build-all.sh  build-desktop.sh  build-docs.sh  build-mobile.sh  build-web.sh  check_secrets.py  ci-local.sh  generate-release-notes.sh  install.ps1  install.sh  pytest_scope.py  run-ci-matrix.sh  uninstall.ps1  uninstall.sh
scripts/githooks/: README.md  pre-push
search/: search_index.json
skills/channel-ops/: SKILL.md
skills/channel-ops/scripts/: runtime.py
skills/docs-sync/: SKILL.md
skills/docs-sync/scripts/: runtime.py
skills/docx/: SKILL.md
skills/docx/scripts/: runtime.py
skills/incident-triage/: SKILL.md
skills/incident-triage/scripts/: runtime.py
skills/mcp-admin/: SKILL.md
skills/mcp-admin/scripts/: runtime.py
skills/node-toolchain/: SKILL.md
skills/node-toolchain/scripts/: runtime.py
skills/pdf/: SKILL.md
skills/pdf/scripts/: runtime.py
skills/pptx/: SKILL.md
skills/pptx/scripts/: runtime.py
skills/release-helper/: SKILL.md
skills/release-helper/scripts/: runtime.py
skills/repo-review/: SKILL.md
skills/repo-review/scripts/: runtime.py
skills/social/: SKILL.md
skills/social/scripts/: runtime.py
skills/wechat-mp-publisher/: SKILL.md  wechat.env.example
skills/wechat-mp-publisher/scripts/: runtime.py
skills/xiaohongshu-core/: SKILL.md  feature-matrix.md
skills/xiaohongshu-core/scripts/: runtime.py
skills/xlsx/: SKILL.md
skills/xlsx/scripts/: runtime.py
src/pyclaw/: __init__.py  main.py
src/pyclaw/acp/: __init__.py  acpx_runtime.py  client.py  types.py  (+6 more)
stylesheets/: extra.css
testing-incremental/: index.html
tests/: conftest.py  test_acp.py  test_acp_cli_phase40.py  test_acp_enhanced.py  test_agent_runner.py  test_auto_reply.py  test_auto_reply_commands.py  test_benchmark.py  test_bindings.py  test_browser_automation.py  test_browser_cli_phase42.py  test_browser_deep_phase48.py  test_canvas.py  test_catalog_schema_alignment.py  test_channel_plugins_deep.py  test_channel_security.py  test_channels.py  test_channels_dingtalk_qq.py  test_cli_deep_phase47.py  test_cli_enhanced.py  test_cli_surface_phase39.py  test_config.py  test_config_advanced.py  test_cron.py  test_cron_history.py  test_cron_scheduler_enhanced.py  test_cron_tts_logging.py  test_daemon.py  test_delivery.py  test_docker_smoke.py  test_docs_parity_phase43.py  test_e2e_gateway.py  test_embedded_runner.py  test_embedded_runner_phase45.py  test_exec_approval.py  test_ext_channels.py  test_extensions.py  test_extensions_misc.py  test_feishu_enhanced.py  test_final_extras.py  (+55 more)
tests/fixtures/: exec-allowlist-shell-parser-parity.json
tests/orchestration/: test_manifest.py  test_storage.py
tests/pyclaw/: __init__.py
troubleshooting/: index.html
web/: manifest.json  service-worker.js
(+581 files in other folders)
