[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-py"
version = "0.1.4"
description = "Multi-channel AI gateway with extensible messaging integrations"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "CHEN SAI", email = "chensai@gmail.com" },
]
keywords = [
    "ai", "agent", "gateway", "llm", "chatbot", "multi-channel",
    "openclaw", "skills", "mcp", "openai", "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    # HTTP / WebSocket / async
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14",
    "httpx>=0.28",
    "uvloop>=0.21; sys_platform != 'win32'",
    # CLI
    "typer>=0.15",
    "rich>=13",
    # Data validation
    "pydantic>=2.10",
    # Config
    "json5>=0.10",
    "aiofiles>=24",
    # Scheduling
    "apscheduler>=3.10",
    # AI / LLM (core)
    "openai>=1.60",
    "anthropic>=0.42",
]

[project.urls]
Homepage = "https://github.com/chensaics/openclaw-py"
Documentation = "https://github.com/chensaics/openclaw-py/tree/main/docs"
Repository = "https://github.com/chensaics/openclaw-py"
Issues = "https://github.com/chensaics/openclaw-py/issues"
Changelog = "https://github.com/chensaics/openclaw-py/releases"

[project.optional-dependencies]
# Messaging channel SDKs
channels = [
    "aiogram>=3.17",
    "discord.py>=2.4",
    "slack-bolt>=1.22",
]
matrix = [
    "matrix-nio>=0.24",
]
whatsapp = [
    "neonize>=0.3.14",
]
# Desktop / Web UI
ui = [
    "flet>=0.81",
    "pystray>=0.19",
    "Pillow>=11",
]
# Media & automation
media = [
    "Pillow>=11",
    "mss>=9",
    "playwright>=1.50",
]
# Voice (TTS / STT)
voice = [
    "edge-tts>=7",
]
# Additional LLM providers
gemini = [
    "google-generativeai>=0.8",
]
llamacpp = [
    "huggingface_hub>=0.20",
    "llama-cpp-python>=0.3",
]
mlx = [
    "huggingface_hub>=0.20",
    "mlx-lm>=0.10",
]
# Office document processing
office = [
    "pypdf>=5",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]
# Everything (except platform-specific: whatsapp, llamacpp, mlx)
all = [
    "openclaw-py[channels,ui,media,voice,gemini,matrix,office]",
]
# Docker: excludes llamacpp/mlx (C++ compilers) and whatsapp (protobuf conflict)
docker = [
    "openclaw-py[channels,ui,media,voice,gemini,matrix,office]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-requests>=2.37",
    "types-setuptools>=70",
    "types-PyYAML>=6.0",
]

[project.scripts]
pyclaw = "pyclaw.main:main"

[tool.hatch.build.targets.sdist]
exclude = ["flutter_app", "build", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyclaw"]
force-include = { "skills" = "pyclaw/bundled_skills" }

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-full = "pytest {args:tests}"
test-inc = "python scripts/pytest_scope.py run --mode incremental -- {args}"
cov = "pytest --cov=pyclaw --cov-report=term-missing --cov-report=html {args:tests}"
cov-inc = "python scripts/pytest_scope.py run --mode incremental -- --cov=pyclaw --cov-report=term-missing --cov-report=html {args}"
lint = "ruff check src tests"
fmt = "ruff format src tests"
typecheck = "mypy src/pyclaw"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",     # line-too-long — handled by formatter, not blocker
    "UP042",    # replace-str-enum — StrEnum migration is a larger refactor
    "SIM105",   # suppressible-exception — contextlib.suppress not always clearer
    "SIM117",   # multiple-with-statements — nested with is often more readable
    "SIM102",   # collapsible-if — nested ifs are often more readable
    "B027",     # empty-method-without-abstract-decorator — common in plugin bases
    "B904",     # raise-without-from-inside-except — too noisy, fix incrementally
    "E741",     # ambiguous-variable-name — e, l, etc. are fine in context
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841", "SIM"]
"src/pyclaw/ui/*" = ["B008"]
"src/pyclaw/cli/*" = ["B008", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyclaw"]
omit = ["*/ui/*", "*/main.py"]

[tool.coverage.report]
show_missing = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name",
    "@abstractmethod",
]

[tool.flet]
module = "flet_app"
project = "OpenClaw"
org = "ai.openclaw"
product = "OpenClaw"
description = "Multi-channel AI gateway"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["misc", "import-untyped"]

[[tool.mypy.overrides]]
module = [
    "pyclaw.cli.app",
    "pyclaw.cli.commands.*",
    "pyclaw.gateway.server",
    "pyclaw.gateway.openai_compat",
]
disable_error_code = ["call-overload"]

[[tool.mypy.overrides]]
module = [
    "pyclaw.ui.*",
    "pyclaw.channels.*",
    "pyclaw.media.*",
    "pyclaw.config.*",
    "pyclaw.cron.*",
]
disable_error_code = [
    "no-untyped-def",
    "no-any-return",
    "arg-type",
    "call-arg",
    "assignment",
    "union-attr",
    "return-value",
    "attr-defined",
    "dict-item",
    "has-type",
    "truthy-function",
]